# robot_minigame_simulator

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  deny.toml
.github/workflows/: ci.yml
display/: CLAUDE.md  Cargo.toml  README.md
display/src/: lib.rs
game_frontend/: CLAUDE.md  Cargo.toml  README.md  Trunk.toml  index.html
game_frontend/src/: app.rs  game_loop.rs  hud.rs  input.rs  input_state.rs  main.rs
lunar_lander/: CLAUDE.md  Cargo.toml  README.md
lunar_lander/src/: config.rs  lib.rs  spaces.rs  termination.rs
lunar_lander_gym/: CLAUDE.md  Cargo.toml  README.md
lunar_lander_gym/src/: lib.rs
simulator/: CLAUDE.md  Cargo.toml  README.md
simulator/benches/: physics.rs
simulator/src/: body.rs  collision.rs  lib.rs
simulator/src/actuators/: mod.rs  thruster.rs
simulator/src/sensors/: barometer.rs  contact.rs  engine_feedback.rs  imu.rs  lidar.rs  mod.rs
simulator_types/: CLAUDE.md  Cargo.toml
simulator_types/src/: lib.rs
