[workspace]
members = [
    "simulator_types",
    "simulator",
    "display",
    "lunar_lander",
    "game_frontend",
    "lunar_lander_gym",
]
resolver = "2"

[workspace.dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[workspace.lints.rust]
dead_code                       = "deny"
unused_imports                  = "deny"
unused_variables                = "deny"
unused_extern_crates            = "deny"
pub_use_of_private_extern_crate = "deny"

[workspace.lints.clippy]
# baseline
all                  = { level = "warn",  priority = -1 }
# Data-is-Key
wildcard_imports     = "deny"
must_use_candidate   = "warn"
# KISS
cognitive_complexity = "warn"
too_many_arguments   = "warn"
too_many_lines       = "warn"
